--- a/index.html
+++ b/index.html
@@ -202,8 +202,17 @@
           <label for="name">NAME</label>
           <input type="text" id="name" placeholder="NAME" name="name" required>
           <label for="mail">EMAIL</label>
-          <input type="email" id="mail" placeholder="EMAIL" name="mail" required>
-          <span class="error-message" id="email-error"></span>
+          <div class="input-wrapper">
+            <span class="input-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="12" cy="12" r="11.5" stroke="#FF6F5B" />
+                <rect x="11" y="6" width="2" height="9" rx="1" fill="#FF6F5B" />
+                <rect x="11" y="17" width="2" height="2" rx="1" fill="#FF6F5B" />
+              </svg>
+            </span>
+            <input type="email" id="mail" placeholder="EMAIL" name="mail" required>
+            <span class="error-message" id="email-error"></span>
+          </div>
           <label for="message">MESSAGE</label>
           <textarea id="message" name="message" placeholder="MESSAGE" required></textarea>
           <a href="#" class="button" id="send-message">SEND MESSAGE</a>
